# file-aggregator

./: Cargo.toml  LICENSE.md  README.md
src/: main.rs
